appId: au.com.carnextdoor.staging.app
name: Sanity test

env:
  USERNAME: 23072  # You may need to replace this with your user id of choice (and password below)
  PASSWORD: 23072  # Password resets on staging every night so you may need to reset the staging password for this to work
  ADDRESS: "55 Pyrmont Bridge Rd, Pyrmont NSW 2009, Australia"

---
- clearState
- launchApp: au.com.carnextdoor.staging.app
- assertVisible: "Log in to Uber Carshare"
- tapOn: "Email address"
- inputText: ${USERNAME}
- tapOn: "Password"
- inputText: ${PASSWORD}
- tapOn: Log in
# for first time login of a user on a device will be shown the verification code screen
- runFlow:
    when:
      visible: "Is it really you?"
    file: subflows/mobile_verification.yaml
- assertNotVisible: "Log in to Uber Carshare"
- tapOn: "City, hotel or address"
- inputText: ${ADDRESS}
- pressKey: Enter
- tapOn: "${ADDRESS}.*${ADDRESS}"
# Now select date and times...
- tapOn: "Confirm dates"
- tapOn: "Confirm time"
- assertVisible: "How are prices calculated?"
