appId: au.com.carnextdoor.staging.app
---
- tapOn: To move houses
- tapOn: Next
- tapOn: Enter your answer
- inputText: test
- tapOn: Submit
